🛠  Fixed code, quote, ordered list blocks not showing up (#2448)

--- a/twake/frontend/src/tailwind.css
+++ b/twake/frontend/src/tailwind.css
@@ -22,3 +22,10 @@ input.ant-input {
 a {
     color: var(--primary) !important;
 }
+
+@layer base {
+    ul,ol {
+        list-style: revert;
+        padding: revert;
+    }
+}
